crates/data-dict/tests/snapshots/validate_spec__bad_cardinality.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 250
expression: "failing_diagnostic(\"invalid/bad-cardinality.yaml\")"
---
Error: [Q-1-12] YAML Validation Failed
   ╭─[ invalid/bad-cardinality.yaml:7:18 ]
   │
 7 │   - cardinality: many-to-many
   │                  ──────┬─────  
   │                        ╰─────── Value must be one of: "one-to-one", "one-to-many", "many-to-one", got '"many-to-many"'
───╯
✖ At document path: `relationships.[0].cardinality`
ℹ Schema constraint: object > array > object > enum
ℹ Check the schema for allowed values?
