crates/data-dict/tests/snapshots/validate_spec__s03_missing_column.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 297
expression: "failing_diagnostic(\"spec/s03-missing-column.yaml\")"
---
Error: [S07]
    ╭─[ spec/s03-missing-column.yaml:12:15 ]
    │
 12 │       - name: id
    │               ─┬  
    │                ╰── column `food.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S01]
    ╭─[ spec/s03-missing-column.yaml:15:15 ]
    │
 15 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` is marked `foreign_key` but no `relationships` entry points it at a `primary_key` column
────╯

Error: [S07]
    ╭─[ spec/s03-missing-column.yaml:15:15 ]
    │
 15 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ spec/s03-missing-column.yaml:23:15 ]
    │
 23 │       - name: id
    │               ─┬  
    │                ╰── column `food_category.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S03]
    ╭─[ spec/s03-missing-column.yaml:29:35 ]
    │
 29 │     join: food.food_category_id = food_category.identifier
    │                                   ────────────┬───────────  
    │                                               ╰───────────── column `identifier` is not defined in table `food_category`
────╯
