crates/data-dict/tests/snapshots/validate_spec__s04_bad_join.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s04-bad-join.yaml\")"
---
Error: [S07] String, number, and ID columns must describe their data with `examples`.
    ╭─[ spec/s04-bad-join.yaml:12:15 ]
    │
 12 │       - name: id
    │               ─┬  
    │                ╰── `food.id` has type `number(id)` but has no `examples`
────╯

Error: [S01] Every `foreign_key` column must have a matching relationship to a `primary_key`.
    ╭─[ spec/s04-bad-join.yaml:15:15 ]
    │
 15 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── `food.food_category_id` is `foreign_key` but no relationship points it at a `primary_key`
────╯

Error: [S07] String, number, and ID columns must describe their data with `examples`.
    ╭─[ spec/s04-bad-join.yaml:15:15 ]
    │
 15 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── `food.food_category_id` has type `number(id)` but has no `examples`
────╯

Error: [S07] String, number, and ID columns must describe their data with `examples`.
    ╭─[ spec/s04-bad-join.yaml:23:15 ]
    │
 23 │       - name: id
    │               ─┬  
    │                ╰── `food_category.id` has type `number(id)` but has no `examples`
────╯

Error: [S04]
    ╭─[ spec/s04-bad-join.yaml:29:33 ]
    │
 29 │     join: food.food_category_id ~ food_category.id
    │                                 │ 
    │                                 ╰─ `join` expression does not parse: expected one of `=`, `>=`, `<=`, `>`, `<`
────╯
