crates/data-dict/tests/snapshots/validate_spec__s06_cardinality_mismatch.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s06-cardinality-mismatch.yaml\")"
---
Error: [S07] String, number, and ID columns must describe their data with `examples`.
    ╭─[ spec/s06-cardinality-mismatch.yaml:14:15 ]
    │
 14 │       - name: id
    │               ─┬  
    │                ╰── `transaction.id` has type `number(id)` but has no `examples`
────╯

Error: [S07] String, number, and ID columns must describe their data with `examples`.
    ╭─[ spec/s06-cardinality-mismatch.yaml:17:15 ]
    │
 17 │       - name: account_id
    │               ─────┬────  
    │                    ╰────── `transaction.account_id` has type `number(id)` but has no `examples`
────╯

Error: [S07] String, number, and ID columns must describe their data with `examples`.
    ╭─[ spec/s06-cardinality-mismatch.yaml:25:15 ]
    │
 25 │       - name: account_id
    │               ─────┬────  
    │                    ╰────── `account.account_id` has type `number(id)` but has no `examples`
────╯

Error: [S06] A `many-to-one` join must have a `primary_key` or `unique` column on its right ("one") side.
    ╭─[ spec/s06-cardinality-mismatch.yaml:30:18 ]
    │
 30 │   - cardinality: many-to-one
    │                  ─────┬─────  
    │                       ╰─────── the right-side join column on `account` is not marked `primary_key` or `unique`
────╯
