crates/data-dict/tests/snapshots/validate_spec__s06_self_join_one_to_many.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s06-self-join-one-to-many.yaml\")"
---
Error: [S06] A `one-to-many` join must have a `primary_key` or `unique` column on its left ("one") side.
    ╭─[ spec/s06-self-join-one-to-many.yaml:25:18 ]
    │
 25 │   - cardinality: one-to-many
    │                  ─────┬─────  
    │                       ╰─────── the left-side join column on `otters` is not marked `primary_key` or `unique`
────╯
