crates/data-dict/tests/snapshots/validate_spec__s08_range_on_string_type.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 365
expression: "failing_diagnostic(\"spec/s08-range-on-string-type.yaml\")"
---
Error: [S07]
    ╭─[ spec/s08-range-on-string-type.yaml:11:15 ]
    │
 11 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has type `string` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ spec/s08-range-on-string-type.yaml:11:15 ]
    │
 11 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has type `string` but uses `range`; `range` is only valid for `number(ordinal)`, `number(quantity)`, `date`, and `datetime`
────╯
