crates/data-dict/tests/snapshots/validate_spec__s08_units_on_non_quantity.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s08-units-on-non-quantity.yaml\")"
---
Error: [S08] A column with `units` must have type `number(quantity)`.
    ╭─[ spec/s08-units-on-non-quantity.yaml:13:16 ]
    │
 13 │         units: place
    │                ──┬──  
    │                  ╰──── `races.finish_rank` has `units` but has type `number(ordinal)`
────╯
