crates/data-dict/tests/snapshots/validate_spec__s11_empty_column_name.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s11-empty-column-name.yaml\")"
---
Error: [S11] Every column must have a non-empty `name`.
    ╭─[ spec/s11-empty-column-name.yaml:11:15 ]
    │
 11 │       - name: ""
    │               │ 
    │               ╰─ a column in table `t` has an empty `name`
────╯
