crates/data-dict/tests/snapshots/validate_spec__s11_empty_table_name.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s11-empty-table-name.yaml\")"
---
Error: [S11] A table must have a non-empty name.
   ╭─[ spec/s11-empty-table-name.yaml:7:3 ]
   │
 7 │   "":
   │   │ 
   │   ╰─ table name is empty
───╯
