crates/data-dict/tests/snapshots/validate_spec__warn_missing_learn_more.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "warning_diagnostic(\"valid/no-learn-more.yaml\")"
---
Warning: [S09]
   ╭─[ valid/no-learn-more.yaml:3:1 ]
   │
 3 │ $version: 0.1.0
   │ ────┬───  
   │     ╰───── The document is missing the recommended `$learn_more` key.
───╯
ℹ Add `$learn_more: http://data-dict.tidyverse.org/` so readers unfamiliar with the format can find it
